Implement Delta REST Catalog loadTable endpoint (#1488)
## 🥞 Stacked PR
Use this
[link](https://github.com/unitycatalog/unitycatalog/pull/1488/files) to
review incremental changes.
-
[**stack/drc_loadtable**](https://github.com/unitycatalog/unitycatalog/pull/1488)
[[Files
changed](https://github.com/unitycatalog/unitycatalog/pull/1488/files)]
-
[stack/drc_get_param](https://github.com/unitycatalog/unitycatalog/pull/1499)
[[Files
changed](https://github.com/unitycatalog/unitycatalog/pull/1499/files/8b968878117e49caf205eae1584bbb964908677d..fe561fea278407099e68aa1778d05e2bb25c518c)]
-
[stack/drc_cred](https://github.com/unitycatalog/unitycatalog/pull/1500)
[[Files
changed](https://github.com/unitycatalog/unitycatalog/pull/1500/files/fe561fea278407099e68aa1778d05e2bb25c518c..82449580bc53760649fe486a2b48437b577f2567)]

---------
**PR Checklist**

- [x] A description of the changes is added to the description of this
PR.
- [ ] If there is a related issue, make sure it is linked to this PR.
- [x] If you've fixed a bug or added code that should be tested, add
tests!
- [ ] If you've added or modified a feature, documentation in `docs` is
updated

**Description of changes**
Implement Delta REST Catalog loadTable endpoint

Adds GET /delta/v1/catalogs/{catalog}/schemas/{schema}/tables/{table}
returning LoadTableResponse with metadata, typed columns, properties,
partition columns, commits, and uniform metadata in a single
REPEATABLE_READ transaction.

- TableRepository.loadTableForDelta assembles the full response from
DAO. Columns parsed from typeJson via ColumnUtils with Jackson mixins
for Spark camelCase support. Commits via refactored
DeltaCommitRepository.getUnbackfilledCommits (reused by existing
getCommits). last-commit-version from table properties, not commit list.
- Fix ApiClientBuilder DeltaTypeModule registration (getObjectMapper
returns a copy). TestUtils.createApiClient now uses ApiClientBuilder.
- Tests: SdkLoadTableTest (external + managed commit/backfill flow),